<resources>
    <string name="app_name">iRally</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_an_event">CREATE AN EVENT</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="event_address">Event address</string>
    <string name="event_time">Event time</string>
    <string name="event_date">Event date</string>
    <string name="create_event">Create Event</string>
    <string name="delete_my_profile">Delete my profile</string>
    <string name="interests_here">Interests here??</string>
    <string name="interests_separated_by_commas_ex_womens_rights_gun_reform">Interests (separated by commas; ex. Womens\' rights, Gun reform)</string>
    <string name="events_created">Events created:</string>
    <string name="interests">interests</string>
    <string name="goals">goals</string>
    <string name="description">description</string>
    <string name="political_affiliation">political affiliation</string>
    <string name="filler_name">Filler Name</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="search_for_events_users_or_admins">Search for events, users, or admins</string>
    <string name="users_found">Users found:</string>
    <string name="no_users_matching_your_query">No users matching your query.</string>
    <string name="events_found">Events found:</string>
    <string name="no_events_matching_your_query">No events matching your query.</string>
    <string name="admins_found">Admins found:</string>
    <string name="no_admins_matching_your_query">No admins matching your query.</string>
    <string name="no_events_to_attend">No events to attend.</string>
    <string name="events_attending">Events attending:</string>
    <string name="pronouns_go_here">(pronouns go here)</string>
    <string name="user_cover_photo">User Cover Photo</string>
    <string name="add_friend">Add friend</string>
    <string name="no_events_created">No events created</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="preferred_pronouns_separate_with_commas_ex_she_her_hers">Preferred Pronouns (separate with commas, ex. She, Her, Hers)</string>
    <string name="create_account">Create Account</string>
    <string name="header">Header</string>
    <string name="interest_to_be_added_or_removed">Interest to be added or removed</string>
    <string name="add_interest">Add interest</string>
    <string name="remove_interest">Remove interest</string>
    <string name="search_bar">SEARCH BAR</string>
    <string name="log_out">Log out</string>
    <string name="create_an_event_lower_case">Create an event</string>
    <string name="filler_event_page">FILLER EVENT PAGE</string>
    <string name="event_created_by_filler_creator">Event created by: Filler creator</string>
    <string name="event_address_address">event address: address</string>
    <string name="event_date_and_time">event date and time</string>
    <string name="mark_as_going">Mark as going</string>
    <string name="attendees">Attendees:</string>
    <string name="currently_no_attendees">Currently no attendees</string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="going">Going</string>
    <string name="no_attendees_yet">No attendees yet</string>
    <string name="no_events_yet">No events yet.</string>
    <string name="loading_event_feed">Loading event feed</string>
    <string name="no_events_yet_add_friends">No events in feed yet. Try adding friends through the search bar!</string>
    <string name="already_friends">Already friends</string>
    <string name="search_button">Search button</string>
    <string name="map_button">Map button</string>
    <string name="nearest_events_to_your_location">Nearest Events to Your Location</string>
    <string name="getting_nearest_events_to_your_location">Getting nearest events to your location</string>
    <string name="no_events_found_nearby">No events found nearby. Start one!</string>
    <string name="leave_a_comment">Leave a comment:</string>
    <string name="follow">Follow</string>
    <string name="event_created_by">Event created by:</string>
    <string name="clock">clock</string>
    <string name="leave_a_comment_on_this_event">Leave a comment on this event</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="comment">Comment</string>
    <string name="see_what_people_are_saying_about_this_event">See what people are saying about this event:</string>
    <string name="following">Following</string>
</resources>
