<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@color/white">

        <TextView android:id="@+id/event_page_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/event_title"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#021D45"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile_icon" />

            <TextView
                android:id="@+id/event_page_creator"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/event_created_by"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="360dp"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/description" />

            <TextView
                android:id="@+id/event_page_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/event_description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/map_button"
                android:src="@drawable/map" />

            <TextView
                android:id="@+id/event_page_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/event_address_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/clock"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/event_page_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/event_date_and_time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/leave_a_comment_on_this_event"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Type your comment here"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/type_your_comment_here"

                    android:textSize="15sp" />
                <ImageView
                    android:id="@+id/comment_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:src="@drawable/pencil"
                    android:contentDescription="@string/comment" />
            </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/previous_comments_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/see_what_people_are_saying_about_this_event"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="15sp" />


    </LinearLayout>

        <Button
            android:id="@+id/event_page_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/mark_as_going" />

        <TextView
            android:id="@+id/event_page_attendees_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="start"
            android:text="@string/attendees"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/attendees_layout"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/attendee1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:minHeight="7dp"
                android:text="@string/no_attendees_yet"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
