<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout">

        <ImageView
            android:id="@+id/cover_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/cover"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cover_photo"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView

            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:id="@+id/profile_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/cover_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cover_photo"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="70dp">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:contentDescription="@string/header"
                android:src="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/filler_name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_pronouns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/pronouns_go_here"
                android:textColor="#F9FDFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_pronouns"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/interests_here"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/events_created_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/events_created"
                android:textStyle="bold"
                android:layout_below="@+id/profile_description"
                android:textColor="#FFC107"
                android:textSize="8sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@id/events_created_layout"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/events_created_title"
                android:orientation="vertical"
                android:textSize="8sp">

                <Button
                    android:id="@+id/event_created1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/no_events_created"
                    android:textSize="8sp"
                    />

            </LinearLayout>
            <TextView
                android:id="@+id/events_attending_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/events_attending"
                android:textStyle="bold"
                android:layout_below="@+id/events_created_layout"
                android:textColor="#FFC107"
                android:textSize="8sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/events_attending_layout"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/events_attending_title"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/event_attending1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/no_events_to_attend"
                    android:textSize="8sp"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <Button
                    android:id="@+id/create_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/create_an_event_lower_case"
                    android:textSize="8sp" />



                <EditText android:id="@+id/add_interest_type"
                    android:hint="@string/interest_to_be_added_or_removed"
                    android:inputType="text|textNoSuggestions"
                    android:layout_width="match_parent"
                    android:autofillHints="Interest"
                    android:layout_height="wrap_content"
                    android:textSize="8sp" />
                <Button
                    android:id="@+id/add_interest_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/add_interest"
                    android:textSize="8sp" />

                <Button
                    android:id="@+id/remove_interest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/remove_interest"
                    android:textSize="8sp" />


            </LinearLayout>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/search_from_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/search_bar"
                android:textSize="8sp" />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/log_out"
                android:textSize="8sp" />

            <Button
                android:id="@+id/delete_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/delete_my_profile"
                android:textSize="8sp" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
