<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout">


        <ImageView
            android:id="@+id/user_cover_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/cover"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_cover_photo" />


        <de.hdodenhof.circleimageview.CircleImageView

            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:id="@+id/profile_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/user_cover_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_cover_photo"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:paddingBottom="70dp">


            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/filler_name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_profile_pronouns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/pronouns_go_here"
                android:textColor="#F9FDFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_profile_interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_pronouns"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/interests_here"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_events_created_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/events_created"
                android:textStyle="bold"
                android:layout_below="@+id/user_profile_interests"
                android:textColor="#FFC107"
                android:textSize="8sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/user_events_created_layout"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/user_events_created_title"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/user_event_created1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:text="@string/no_events_created"
                    android:textSize="8sp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/add_friend"
                    android:textSize="8sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/user_events_attending_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/events_attending"
                android:textStyle="bold"
                android:layout_below="@+id/user_events_created_layout"
                android:textColor="#FFC107"
                android:textSize="8sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/user_events_attending_layout"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/user_events_attending_title"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:text="@string/no_events_to_attend"
                    android:textSize="8sp"
                    />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
