<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/toolbar"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="100dp"
                android:contentDescription="@string/profile"
                android:onClick="goToProfile"
                android:src="@drawable/profile_icon" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/feed"
                android:onClick="goToFeed"
                android:src="@drawable/feed_icon" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="100dp"
                android:contentDescription="@string/search"
                android:onClick="goToSearch"
                android:src="@drawable/search_icon" />
        </LinearLayout>
    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>